Created documentation and help tab.